Place for a logo added

--- a/styles.css
+++ b/styles.css
@@ -98,3 +98,20 @@ input:invalid{
     border-color: #a02a2a;
     border-style: solid;
 }
+
+.logo{
+    display:inline;
+    opacity: 100%;
+    font-size: 2.5rem;
+}
+
+.logo-div{
+    margin-top: 25%;
+    height: 20%;
+    width: 100%;
+    background-color: black;
+    opacity: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
